add authentik secrets

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,59 +5,62 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:L3d12oGGxpvxowt8,iv:j+1MMWPG4Tof7pfrRR+jR65rsAwJeVMaeo4QKqZ85JU=,tag:5JsJBkc7f+fVQ9BgpQVvAg==,type:str]
-  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:AJ9RsO5c9OQ9A4WMWt/DkBRcYnE=,iv:jQ4cbXhTu2w1wSPTGIjSNUbEuFEYwj6YZlwRSvQ+HlA=,tag:9YJ982g1Yh5aRLsvdrRjpQ==,type:str]
-  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:qZN8qnxMy634JhuDq0PD+96gCuZmZjBYzbv1oRLex0Dw3WSF9hEJgQ==,iv:j3BEE6hPuVPtQRJkjaQmmQhNg7oTJBCCAiF3lUWYXhU=,tag:Rf0jNjSIlD8aE3BFOKPEJQ==,type:str]
-  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:aM3IHQmEkoG9WFzxVLwIsK+yxM4=,iv:7dVMP6hUuDsBf1RarwFxsCkNebe5Ngri3Q/C3SMWhks=,tag:43q7Ra0JP/YuOQMt8UQzXg==,type:str]
-  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:Fwv67I6nptFLesfsmfaTUnRVLgBV0KX9OycRdPV/cdpI+7czxfT2Sg==,iv:S9cQVc9CvPfcIazFSpQqO0fkyQnKwEcQ6GhXC2xSyt0=,tag:JSYg802yetWsiD5SOJHnrA==,type:str]
-  SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:SySWY18WGZVeEUVA9X1Y/wYwlUSLmEXmx9UwAQ85wFpYRFXJ2+EWLRZziQUUvBTiOzYJN74vHWlKCHCUJtlzWSngwzXvLGX1kJFlGKd3l9i3vbkstl2au+NKfNVcKmaBF39JJvqWefdjC2pWlRx66+WdpsNGlOsZ9Oahbl7x,iv:ZXERJmWyHs4oK7Q6JdqLH03trKEY8ftLg8uNXpsOWgQ=,tag:HU/MYrIRgSkqWWaTiVrsFw==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:4UX03zxGOsGJUPT+,iv:JIYfGtex6M2nRl0U043+R7jZa49914ZrbJfWFuxKRpw=,tag:Ap3eFgNJ46WWQMfcn/6OKg==,type:str]
+  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:sqz/nBIes+NscJqcRWw1WbgbkWM=,iv:/2G4b7ycQG+6GXFDBypouCyp/LKc+oMai3WAPldJmwU=,tag:NKFZcnzDNyP5rEOiqprz4A==,type:str]
+  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:xbv+jLF1fHxanwdJlXS5Y3h1Ti7/QUJoAdDuPQ58oHX2fUqmiFeCbQ==,iv:Kw7ll9wHGAPc7AV40b8qzfxPaIT69O974sUjPiI3cyk=,tag:87tZDXgK1TM6QpPR6mvAYA==,type:str]
+  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:BQvx2AS96cQ5uYe1wXBRKQJiQvA=,iv:k9NLsX7+HaCJwErkbv7xWViimqkoW4K8cNV6v/inZP8=,tag:axS9peCqzW2Il4cD8z2vRA==,type:str]
+  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:5IJsGVbS7wSSr+VB+fl155VqgN0IzAehEpqrSVqygo68JEH7bMNdRw==,iv:nulGOTkFEdaQ67O31enq9Riv8HfCb1HFF8GNYr96Ds4=,tag:LOwIK8TUbpuqZWXoPl1/xA==,type:str]
+  SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:dYxNBSQR5pSmuNHCQd0iZAiAKE7jqSWefh0KWxbIjhOHVfl7AQfcNpMOfYpQZWUzwJw7YG62R/KeOqgEUw3FbRoQW5DlzrM3gMjdNvtb/rvv9JAFBm2AEbw4YLww3Sybqgbl5tKe4rMtm3vNyPn51rcLg9fBq+/hWe0iUD3u,iv:lcEZOaN4yv5EC712TzKjrJhmxoTqzWrE4/akD7Pf0/Q=,tag:H50BpOGGNsxAwI7CdJ788Q==,type:str]
+  SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:sSaAC58wldf+73++KX8rBdS5JnhlZk8UvRrvGuUnfi5cg+03cn9aaN4kYs35nack,iv:eNoEqOeOJxl6tRb7xxXlXsja9fP2wBMx22h8y4X7dmM=,tag:gpEpWn8NOe51Lckk1cBnDQ==,type:str]
+  SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:wWO5FNuE/ocY0hxZGFQ=,iv:+qYta4+2fy4aYftKKKH2nc9OaETKlIr1DZt4GE7YGf0=,tag:77ZYbJYWwkxg4Pt0gubIPQ==,type:str]
+  SECRET_AUTHENTIK_REDIS_PASSWORD: ENC[AES256_GCM,data:HdUm2k9u5d4gZFMRf0Q=,iv:prATgWJOr//jrDJqLPIy77SuelfTNslhMRHgrQ9R9Pk=,tag:bt/nJEW/ztve8Y6WfGKQBA==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-10T15:47:01Z"
-  mac: ENC[AES256_GCM,data:1TVu+ECPV5BqI5CkZhHGzh3945XYp/t20jdBAe+sPBL1qWOzQhF3AH9cpUBr9fjqV30exsut83q4LhEYqkITYF58hRzYErZVMVqdLoHXITDY15/Wqwp/kUZLBh26V/RlHMgILO6zt2Dg867lt4FHfic58R8WLyeKGmFkzcOhIJY=,iv:Uddzh2NH4Q/8xlTe2XhUwXJARQ870JlQG5GKbvgXTtQ=,tag:EXqqY6/v+w1N1aHOGf1ikw==,type:str]
+  lastmodified: "2021-06-10T18:07:26Z"
+  mac: ENC[AES256_GCM,data:xnkI0aO/fd8a066h2Wu160jsx62B6jOVljfx7uYVEfx+Z0e31pPJlhRZK496seIxcNy9qqBrlKZ4exywizXmMfpJDJdahiqeEkz8ikRWOTvg/uFVS3W39nQb7Rzn3+OGJKJ6BivtqcuxRxN2FhtkFT2N0a/jcvE3XuxJPMc+bgU=,iv:p8I7IGg8fJty5OaQU/A95PVHR/XnLWccs9Coi19Qilo=,tag:Q0keSgLNdeI1PMt6xLo4ng==,type:str]
   pgp:
-    - created_at: "2021-06-10T15:47:01Z"
+    - created_at: "2021-06-10T18:07:25Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8AQ//V7e+6mGUEqNBZNvQqWo6KXE2SVzDfRY7K4MTtu9fXjYW
-        17emGjw5ibUjX97wCmEVt3wVWyCJ6pE0ub9d0FZpFU8v4UJANNuhk96pk0UYUe5C
-        le4ktyz/lp2CKVEyBQffNRyhnfCNc4tZgiqk5yhPvDJhcZBiS6d4gxknVeC7VCib
-        locGd1RvvVUthS8biJImGGla9pUy20ySy4xfCWDMEupurwS66Z/cIZH0IDAIvN9p
-        tdN+O4d5VPTfqE4pCh7sTWTEf4edpcsfVJwvItoKx2Dt8P8+Elmq2Rq1jMBk4TWZ
-        fOv2aEfOJOBwGMnzf/WNJwdWMMNpWm2GThqu7XsSWqZzF2WvC3IdfRju9g3fR32A
-        nmNzTnsf8HZAzAAALYP5SZTQ8zzGMSAvV18dIMxOxYOrJlhzrjk4q4I4wT7UIA/E
-        Fg4Zsq2/lmm8dhjg9492S0SBLLyYfOPeMUOML7wZMmSb4rhrXt2kxGyEYDoDgUoS
-        xzW0uFC0c8L4RWmi2+VTEX4dpnxVzw+APDVwpb1de3uzv4KE3bEWu7FLDSSVsjhS
-        DU7JHFZpWAknU3+h2p51dCaQsJA8YTK6mctjuCLzjAWOaoxoVXJJnQVwcX7iNUMt
-        J4Mgu5OTyJpNibvb81H1VtCih6nSzY77kbjeb9dTDVEi1PcSKF07+LLYrY425PDS
-        XgFex2WYWx+QHhuDNfBEAWY/Uzo6MWTRgGIjkR7xA/XJLpG4etE7xZAM3ayqQqi3
-        OitFBcYIx418c8OiuiKEFT45y+CyDorlSItlSKODznCkM46DjbutLACEXyfKHMY=
-        =lEcV
+        hQIMA8oSIqtHvng8AQ/+PVT2wt1kM089OxFUjILRxxoT7rKHI0vIYzCq35xHLCaw
+        vLEiRspLpJ9SBH+nuHBP/yIua++jFBYW8iz24b7tW0WXeOPnN/qiNwuwhEK4WgZg
+        GB8qEvTcQCO9OXk0MVHaN96Hz0CKxeDvF9OS7XX7bce7QpV8LZLhnxjQU7HXW4TE
+        eTHOnB7V6QOoI/9KERDO4pgcuk5dyDnDSUUdIYtNgLSX9BI3nnjz7QN+HT84LVFa
+        kfxxFrwt6TxR+Led/sVFM20tygT4adBlcVnGUKIIYjL6fC8yX6S25/WxeFKm5Pz7
+        xdLJJWpEAJtXaXgfCK4MEgtHgszX8oco2seQQ5mPdYK9MyhwGhLB8sEfuBtpUHde
+        RX659firTVxVUBugPlwnYu/NFKOwbGjZrycJOgtcEFgRI2eQ+e2Jo6WwszRUcqp7
+        z4yUHFMxbrBwWV7s9bXeuNuBerNbiuzPThHY4jJmwKfYf4rht8WaFU4sLN5gWnlN
+        LggfRyGO+Lqke4qWNVYQ1XQGrDOnVmvPp+Z0qeesF36sKb9AafGl71wN/67HHH7H
+        4up+pABj1WAZSykW6mRMga9nVqhiZ8N+6bhsajk1CxQH6N4QVIobskZHQ3a0MDCb
+        DB+c4iOwk/B9uszXU3fyixd2gavQIpKSujY5QelAQuk0ybtJ8B0XSeSCoYOS9anS
+        XgHmPYuQYJkLPdpUsZtpDGKEnM8IDXEkSnx7mY159/uwpojeOB9NhVyqV956ClYP
+        exRNYTnpOpgp5dMiwGoXWL1zcOxi3FyCi0Wuf73bkvnZ5/IlRTtNBrkX5TIWOtg=
+        =a2s+
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-06-10T15:47:01Z"
+    - created_at: "2021-06-10T18:07:25Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4AQ/5AXofMw/iWvkkb3DaMLP6RNbFDZvlEnYDsBP6g3AptEzq
-        9HryvId5BuI8zW1O+q6llQs4vGXWDNUjfQ9rfiknERzkjt7ei6FCuznfn75dTSu+
-        IlJoX5ypK4L55foVBIcSvnDQVkCWsbT3JbrfmDfF8kIt9KOwYrucUPXZLPOtKL51
-        K4gf/pDN6p9hgeqBJfHP/wjrHu3r0b81VjZKVP8ERHi5QBKZC0ZskVMk5/T4IFLh
-        3juhfaDMuKBKx7LaO8V0P/PhgNhqvqHKAo57mcgH+WDcxHyvaqBmYRzF+m5VLksA
-        N28s7whFSeWWXh1pq/E1dQrqDqIDrp7hB/kXbo1bveBzhDiwlSMZapLaSq8zy9sk
-        fwVFF35Felf3RgGPm69b83paLyjYzPtjVSaVXJV8zmq5vv7Sx5nwn52aHv3RS/Cr
-        7bvXqEQ4y8UvI94fS6uEYqyiI+q03E0/BcPYeMPaGAQquyoZvTWUJ+6bNAqyve3E
-        Hjz0SV/5mYkGSQ0czD45wD78OK7upgbMEpxgla+ECzTvprinlsmWWPEzj2TCViwZ
-        lvantWXl+yBzVFZmYTFtFybwGpP058DvfIPuXP4gLd59AQ6l2lQCTY3wx7/rN+He
-        OVAXx6U72zzzOxQz/zQYac1Jfk6aeYSRgMOiKzRkwhKbs69g1aFE5V38SQigQu/S
-        XgG66zS+mxYkfUY5vP6q4bgiloPU/3Kce0o/OWUQYg+cnfyABGun+VBEEhFZwxFX
-        fahHRNNbuSvtIBw0ouY24nKTPMSSzvMpzslvj579VpxlfhdEWOvYn096nwozimM=
-        =3loo
+        hQIMA8ORz3KkY6O4AQ//bXk0ZUnXUGjTHRwWv8znNXZ82l6pZiGCQFNjohb340l1
+        qKztFxXDJkoxK+3vHz1JACPHV1QRK6IteS7Bha6lByISSsGSpiN0bRE1Ww7UsdQQ
+        6pcP/pZoRV2hqwLTBBEofdA6Cg1RmyP2FJvG2qBNEA7mxWbubaFNkgP5nfpNDAK/
+        RDScoC77GgZGGKQbDaq8MnF8dc3et+hxNdhFNsnj1PMuEbkyY6ZT12YJAbMHlNYh
+        gzhRnhsDEbwLglv70Qnu7DJ0eoEpzi4UekDezBE5yYiU+XbHdtdk2qbcHFiYGSPw
+        LbuIGsHuFYO0DQLdCynk86iOJbs7MiG40gG2NwEenJVsmU+RHZF2eKVaFsfzIAhk
+        8B6SglPgnhyBauzZ1PPXS7lZyOO+0/hhdkRaWmYMAOxAuY0hYWuKFY8cvMK+TO80
+        dJj4R98LF9SofdO2IBhWmeY5XPE1uZdnPZ3N7P9oXXkZFM9mY0+/4YbOayffpN+i
+        n/Otm01HH2d2puoqz4JV2uxwlze6w9Wj6/Yf3ixeSTgXmFfwDfg8ntrpuqEqphvK
+        13q/X+KMrgzPOK7GjTGUGLKMUnkuXW9n+jDf5hKvMuP55l2oaj/ZvHTB3xQNEpGF
+        L+T5QFUYzXWLrDBvn7yaRmTLt02kxbwMya391TtasgqraixH6wXxtMo8AnOcesLS
+        XgFKKG09Ju5my4G9XynnyuriHDyLlt0NnO0Dkrl6wPzZ+Jzx2CeGmT1XNmhNskJG
+        KtxJzBycPAHYZou7TxoV9pquwa+z1dfXOYWdfuItZTWvzvORl4MYuIa6ZXHAPyo=
+        =56XS
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
