add geoip to authentik

--- a/cluster/apps/security/authentik/helm-release.yaml
+++ b/cluster/apps/security/authentik/helm-release.yaml
@@ -38,6 +38,9 @@ spec:
         hosts:
         - authentik.${SECRET_DOMAIN}
 
+    geoip:
+      enabled: true
+
     authentik:
       email:
         host: smtp.${SECRET_DOMAIN}
