add dex secrets to cluster secrets

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -5,62 +5,73 @@ metadata:
   name: cluster-secrets
   namespace: flux-system
 stringData:
-  SECRET_DOMAIN: ENC[AES256_GCM,data:4UX03zxGOsGJUPT+,iv:JIYfGtex6M2nRl0U043+R7jZa49914ZrbJfWFuxKRpw=,tag:Ap3eFgNJ46WWQMfcn/6OKg==,type:str]
-  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:sqz/nBIes+NscJqcRWw1WbgbkWM=,iv:/2G4b7ycQG+6GXFDBypouCyp/LKc+oMai3WAPldJmwU=,tag:NKFZcnzDNyP5rEOiqprz4A==,type:str]
-  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:xbv+jLF1fHxanwdJlXS5Y3h1Ti7/QUJoAdDuPQ58oHX2fUqmiFeCbQ==,iv:Kw7ll9wHGAPc7AV40b8qzfxPaIT69O974sUjPiI3cyk=,tag:87tZDXgK1TM6QpPR6mvAYA==,type:str]
-  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:BQvx2AS96cQ5uYe1wXBRKQJiQvA=,iv:k9NLsX7+HaCJwErkbv7xWViimqkoW4K8cNV6v/inZP8=,tag:axS9peCqzW2Il4cD8z2vRA==,type:str]
-  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:5IJsGVbS7wSSr+VB+fl155VqgN0IzAehEpqrSVqygo68JEH7bMNdRw==,iv:nulGOTkFEdaQ67O31enq9Riv8HfCb1HFF8GNYr96Ds4=,tag:LOwIK8TUbpuqZWXoPl1/xA==,type:str]
-  SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:dYxNBSQR5pSmuNHCQd0iZAiAKE7jqSWefh0KWxbIjhOHVfl7AQfcNpMOfYpQZWUzwJw7YG62R/KeOqgEUw3FbRoQW5DlzrM3gMjdNvtb/rvv9JAFBm2AEbw4YLww3Sybqgbl5tKe4rMtm3vNyPn51rcLg9fBq+/hWe0iUD3u,iv:lcEZOaN4yv5EC712TzKjrJhmxoTqzWrE4/akD7Pf0/Q=,tag:H50BpOGGNsxAwI7CdJ788Q==,type:str]
-  SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:sSaAC58wldf+73++KX8rBdS5JnhlZk8UvRrvGuUnfi5cg+03cn9aaN4kYs35nack,iv:eNoEqOeOJxl6tRb7xxXlXsja9fP2wBMx22h8y4X7dmM=,tag:gpEpWn8NOe51Lckk1cBnDQ==,type:str]
-  SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:wWO5FNuE/ocY0hxZGFQ=,iv:+qYta4+2fy4aYftKKKH2nc9OaETKlIr1DZt4GE7YGf0=,tag:77ZYbJYWwkxg4Pt0gubIPQ==,type:str]
-  SECRET_AUTHENTIK_REDIS_PASSWORD: ENC[AES256_GCM,data:HdUm2k9u5d4gZFMRf0Q=,iv:prATgWJOr//jrDJqLPIy77SuelfTNslhMRHgrQ9R9Pk=,tag:bt/nJEW/ztve8Y6WfGKQBA==,type:str]
+  SECRET_DOMAIN: ENC[AES256_GCM,data:/QOrWhSd2dEpFi8t,iv:njtO65Hr5wB/RBfsYns7MM2qNYw05pgwW/AKf+uxupg=,tag:6qnJAIKPEuE+IUQ+Lo5S9g==,type:str]
+  SECRET_THANOS_S3_ACCESS_KEY: ENC[AES256_GCM,data:Cnlj1NbBHPFUAhEg6t6O5jNjKjM=,iv:uHm3Yk1GG51+/q3bcryppicZKwXl1S0PXObXV+aNc1w=,tag:kcGEQZcUkPHAIDn3mDsxLA==,type:str]
+  SECRET_THANOS_S3_SECRET_KEY: ENC[AES256_GCM,data:iDgYt+ZJ/sl6EMUxMqvhYSJaRClKa5+WkfN6w01BYSF7r7s9cUsHiA==,iv:ZnK9GdChRzZtCWNfcyJIVgh+oRgkqK2nHlxFPudjgMM=,tag:9ub8TRiDP1GltuvqZIBLMA==,type:str]
+  SECRET_LOKI_S3_ACCESS_KEY: ENC[AES256_GCM,data:71h9WuFJoj1/8p5j0rRVRN4lgH8=,iv:1TmSjfjRnWKivtEZTRZtkvEAH8ykq0NQPInk4JqJYJk=,tag:Kva0oa2oNA5whrvtSRqhzg==,type:str]
+  SECRET_LOKI_S3_SECRET_KEY: ENC[AES256_GCM,data:aLaCSTR+ZVWewGEgPAojv/kjg3wYOVPzVc1D+Vz/2+IOyvFfjBlqFg==,iv:InWh2lp7jHGZpwxuVFIEbhlY4DJqi8CaZHOQNLDKHcM=,tag:srUhnii5GCeB2suCUYTJTw==,type:str]
+  SECRET_DISCORD_KURED_WEBHOOK_URL: ENC[AES256_GCM,data:7ogYDAlESBXctP9oGbMnOBDCJnqJQRcDDbaktXBRTaDDr8kd6p0LpiYD908b9b99WPfIt/0FJC7DUu6bd0MwXAkb7adHKllhHCLS29K89pIbfS/rQizl7NFS7YOvF4e5fCkOvG7eDJA0kMyxxH7iszkKbAXJWc5/PNF583zJ,iv:kDGd5jrD04zPPFCHC6zjlHnMF1GRymoqZtqeL2ZxT1I=,tag:jjo7vvbUnIBwsYCK3xqlYQ==,type:str]
+  SECRET_AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:N7hUtoiR0zoPixPi96nMqp5FAitFoNaIZkTgGejJ1/Sg0VsAa9+w9bVDv6IBk5L0,iv:nyNRYb7LZc2mJdaDVz9ffgb9gTeslspE7e8+Utk4DFY=,tag:N/brYZhAJYwcCfntPdfj8g==,type:str]
+  SECRET_AUTHENTIK_POSTGRES_PASSWORD: ENC[AES256_GCM,data:+LjSGJcYh664zi5rkEI=,iv:HDbx6P5liq6vJjxk5Nepp1qCeJJAIUvav5YXYiPllvA=,tag:GW+/5XxZsdhSIUSpkIuicg==,type:str]
+  SECRET_AUTHENTIK_REDIS_PASSWORD: ENC[AES256_GCM,data:73JR6jY2/u9GIis4gJU=,iv:MGkkduRWFrv63pMVJ8iVSJro+Fsu3lwDEyFdHIFzluA=,tag:YcnTBWtPQ7x2tEJRU+E/3w==,type:str]
+  SECRET_DEX_GITHUB_CLIENT_ID: ENC[AES256_GCM,data:GNPJbd3XZ1NjmgKsGAHKsWHzRYo=,iv:KqEXx7T4mKCoboc4QYNCUCFskgXTI1dcXoz0ZoHpC4E=,tag:ArfQtAth92qB/ULzGMndrQ==,type:str]
+  SECRET_DEX_GITHUB_CLIENT_SECRET: ENC[AES256_GCM,data:vVUney0/Xw8Nbm+STJTFdgKvlvyoc3TeVWOwStk6hDEicLyC5ylXIg==,iv:0aDu9HsYYRTDvOWUDzLkELD1awZezk86UZxglCNkUrQ=,tag:D/MkhH3e0Udfs+NhbUkEiA==,type:str]
+  SECRET_DEX_K8S_AUTHENTICATOR_CLIENT_SECRET: ENC[AES256_GCM,data:CGgO9O84qanGAePoU83VZueZTnqSQ3/cc7Mj0uBKWnLMBjzIMQeh2Q==,iv:M3z45U1y+pas7xugzbTuh5W/jQBdGgoGiQd83movAeU=,tag:Brke8gxmkAU4kQ2m8qYgAA==,type:str]
+  SECRET_DEX_GRAFANA_CLIENT_SECRET: ENC[AES256_GCM,data:2/akIBOYdJLFKE/Djelb+IEPO10IpsC21eOAWyEzRVedbbovDIyH/Q==,iv:fwuXbxI73ficE58tX/B8YrFyM4kph02S+c1nlrHeP3A=,tag:2e9Sqix7u/O8OyOlwj5OwA==,type:str]
+  SECRET_DEX_NEXTCLOUD_CLIENT_SECRET: ENC[AES256_GCM,data:Y4RAVa97rvyNv1xh0h/IdO+5JCCJrpO2ncSdQldlR1eF+lVHUFD4Xw==,iv:gZhYfaa16DXjd164XF7xC11TaW+ykEklGhqM1IIPczY=,tag:62CVIYxNQdYwb6owihIxrg==,type:str]
+  SECRET_DEX_OAUTH2_PROXY_CLIENT_SECRET: ENC[AES256_GCM,data:iMKWnguzLALlsFb4C5eWKCoF2yrrzPfh6gpiGN8oI1DyKFaevZ3C1Q==,iv:5w8Vn3/0n+DAarBUFdR7ktG1L6bWW35iJ3zlJijts9Q=,tag:Xfz3uC2lY0HFFdhpsiA1xw==,type:str]
+  SECRET_DEX_GITEA_CLIENT_SECRET: ENC[AES256_GCM,data:fVyPqFC//1x1rdAIyXNO2rS18QwvuFupVcBx9i7/XNlU+f7bo7yPjQ==,iv:N/AqTS+ixjl7TyQpU+GqJWJUhT8+eHpA0ffy1sgNVuc=,tag:JneYcCEM996JxTPCQykhXw==,type:str]
+  SECRET_DEX_POMERIUM_CLIENT_SECRET: ENC[AES256_GCM,data:BXgqIXgIuRpLJMqtOVmw6zNc409k+BBw+2WG31bB,iv:WIwr3GzX8RDr3Tce3ZERNNVi5Wverlf8F94l7PclkAw=,tag:bFQDyygakPRLr/AOufO8+w==,type:str]
+  SECRET_DEX_STEP_CLIENT_SECRET: ENC[AES256_GCM,data:5yJY2h9Fb9TJzKxpzJKNiJQMzcaWM1qYykgceN38uNErWKBEXrO5fY1Y,iv:p1kP5MsW1gDi0dJsVaF3lHK0MlgU1J1rfC8i1adJdI8=,tag:yQ/cpm2HRsPxOWonOlzdbw==,type:str]
+  SECRET_DEX_K10_CLIENT_SECRET: ENC[AES256_GCM,data:ON2HPR/SO4f6op6TOfv4454FWK5+zzG1r7MKYbSzSvRc+7smnVq8CibI,iv:8a3ptoK6dnZwoQXIvVqorwbdQjzl2lABQke5EeiDAdE=,tag:tYCFKpbu2DOzTOwKVKmT0g==,type:str]
+  SECRET_DEX_AUTHENTIK_CLIENT_SECRET: ENC[AES256_GCM,data:LT5k3HF2wCQMbG5lkfezmpSrkFrqYVHkCLVMJbzdtc/pdBqiISn8CQVv,iv:20oDdmzcOjSiboHUHtQ4u4GuLdCuvjg3LOh5FOv+zZA=,tag:t8YBMCmWPlGcjHOuZ5Yq7w==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-06-10T18:07:26Z"
-  mac: ENC[AES256_GCM,data:xnkI0aO/fd8a066h2Wu160jsx62B6jOVljfx7uYVEfx+Z0e31pPJlhRZK496seIxcNy9qqBrlKZ4exywizXmMfpJDJdahiqeEkz8ikRWOTvg/uFVS3W39nQb7Rzn3+OGJKJ6BivtqcuxRxN2FhtkFT2N0a/jcvE3XuxJPMc+bgU=,iv:p8I7IGg8fJty5OaQU/A95PVHR/XnLWccs9Coi19Qilo=,tag:Q0keSgLNdeI1PMt6xLo4ng==,type:str]
+  lastmodified: "2021-06-10T19:39:45Z"
+  mac: ENC[AES256_GCM,data:kYzGupYpA5V9IoER3HgRAZ9WiVtEhFbdj9INqmkg5h8Pk9g8RJQrkUtzVWdsYBXTI+M5hjbqFL+xuBw5njgSqSXJld3rl6LQYW0knPU0ooTSDzECO4r1tgDKsrOkv7pybiyRNyfCc0EArCd9T+Ob9cl4unuOpEbd3nZreMZsjYw=,iv:B77yqUv7seD4YPrX0iwyQ4icjQ1/evMiurY1w/KEiQU=,tag:dP0k1RDP6qE7RtmZ1J1+5A==,type:str]
   pgp:
-    - created_at: "2021-06-10T18:07:25Z"
+    - created_at: "2021-06-10T19:39:44Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8oSIqtHvng8AQ/+PVT2wt1kM089OxFUjILRxxoT7rKHI0vIYzCq35xHLCaw
-        vLEiRspLpJ9SBH+nuHBP/yIua++jFBYW8iz24b7tW0WXeOPnN/qiNwuwhEK4WgZg
-        GB8qEvTcQCO9OXk0MVHaN96Hz0CKxeDvF9OS7XX7bce7QpV8LZLhnxjQU7HXW4TE
-        eTHOnB7V6QOoI/9KERDO4pgcuk5dyDnDSUUdIYtNgLSX9BI3nnjz7QN+HT84LVFa
-        kfxxFrwt6TxR+Led/sVFM20tygT4adBlcVnGUKIIYjL6fC8yX6S25/WxeFKm5Pz7
-        xdLJJWpEAJtXaXgfCK4MEgtHgszX8oco2seQQ5mPdYK9MyhwGhLB8sEfuBtpUHde
-        RX659firTVxVUBugPlwnYu/NFKOwbGjZrycJOgtcEFgRI2eQ+e2Jo6WwszRUcqp7
-        z4yUHFMxbrBwWV7s9bXeuNuBerNbiuzPThHY4jJmwKfYf4rht8WaFU4sLN5gWnlN
-        LggfRyGO+Lqke4qWNVYQ1XQGrDOnVmvPp+Z0qeesF36sKb9AafGl71wN/67HHH7H
-        4up+pABj1WAZSykW6mRMga9nVqhiZ8N+6bhsajk1CxQH6N4QVIobskZHQ3a0MDCb
-        DB+c4iOwk/B9uszXU3fyixd2gavQIpKSujY5QelAQuk0ybtJ8B0XSeSCoYOS9anS
-        XgHmPYuQYJkLPdpUsZtpDGKEnM8IDXEkSnx7mY159/uwpojeOB9NhVyqV956ClYP
-        exRNYTnpOpgp5dMiwGoXWL1zcOxi3FyCi0Wuf73bkvnZ5/IlRTtNBrkX5TIWOtg=
-        =a2s+
+        hQIMA8oSIqtHvng8ARAAgHews/0cjAldclF9ENvPebjTSauQ3bP0CL7Xtgh0UMwH
+        ewiJ8tAveXTp8m3VY1TogQ/+rPFPXjvFzIVxDsBFFEPqPdnwqWn2NE4DNfzdkETA
+        5ppxtpiPO7657TT3FN8PaHNjFt9S7FPBAB1KNyo795DGE80aTFLsGGA5/eZgS+S3
+        8d7xchOIF2lViVCU44CGKEXTz1eUYt57SHPBJ6UJzi1ZoCQjaesoeDF+wmcyn4eK
+        MYoSFBr/wScFtBE76JnrX8GuCnvGaizdNfzON2+Mi+KZpPAnBf0DxHgT0xIPXRFd
+        KnU5R4dOSc3SxyHlZzOaq5x6FgmIrHHomloqi+bnqNvS7fyGbsADtQXGkEwdrxU9
+        R7YIr6JdEg1+maQnoEGaB3l3mQhSieWgq8wwWvwiGL53iMJH5qZ9kTWdPDXFddHL
+        nzmIsRPxOf7X+rnsLGZF4iXTZzdRwUQ5rGDT7CcFJttefNHzvX01tDM4MU4EzqEk
+        732Ea84YZqC96ut8XeK+MeqCYZq6aKa0bFOawvd54oPC1LzhouOPirdR9fiP6ugN
+        DBKToKhZHQokSPq55Ey0PRjtXgZq2jQJxnWV/qSIVenRey4SH2gq/K0htOr4JAhG
+        LWuevBV/aSRDVExnlpTME80/CBWQNHNBay6VzLyV9s9v8DONjDoKCE6oVzDi5fbS
+        XgHs5kcXdkgltS/5JpgfouJNFbZOasOVQAYfd3nQUFWEqK97Q9id0q/5JmwwWXxb
+        B4uv/IevaDiKYBc3kN2s91Ikp6TFX2QvyeFx0dioW07Wkn+3ghf86FysxHdywu8=
+        =T/Hf
         -----END PGP MESSAGE-----
       fp: DA8002060402EC39B195451D5CED80362B5A4EF2
-    - created_at: "2021-06-10T18:07:25Z"
+    - created_at: "2021-06-10T19:39:44Z"
       enc: |
         -----BEGIN PGP MESSAGE-----
 
-        hQIMA8ORz3KkY6O4AQ//bXk0ZUnXUGjTHRwWv8znNXZ82l6pZiGCQFNjohb340l1
-        qKztFxXDJkoxK+3vHz1JACPHV1QRK6IteS7Bha6lByISSsGSpiN0bRE1Ww7UsdQQ
-        6pcP/pZoRV2hqwLTBBEofdA6Cg1RmyP2FJvG2qBNEA7mxWbubaFNkgP5nfpNDAK/
-        RDScoC77GgZGGKQbDaq8MnF8dc3et+hxNdhFNsnj1PMuEbkyY6ZT12YJAbMHlNYh
-        gzhRnhsDEbwLglv70Qnu7DJ0eoEpzi4UekDezBE5yYiU+XbHdtdk2qbcHFiYGSPw
-        LbuIGsHuFYO0DQLdCynk86iOJbs7MiG40gG2NwEenJVsmU+RHZF2eKVaFsfzIAhk
-        8B6SglPgnhyBauzZ1PPXS7lZyOO+0/hhdkRaWmYMAOxAuY0hYWuKFY8cvMK+TO80
-        dJj4R98LF9SofdO2IBhWmeY5XPE1uZdnPZ3N7P9oXXkZFM9mY0+/4YbOayffpN+i
-        n/Otm01HH2d2puoqz4JV2uxwlze6w9Wj6/Yf3ixeSTgXmFfwDfg8ntrpuqEqphvK
-        13q/X+KMrgzPOK7GjTGUGLKMUnkuXW9n+jDf5hKvMuP55l2oaj/ZvHTB3xQNEpGF
-        L+T5QFUYzXWLrDBvn7yaRmTLt02kxbwMya391TtasgqraixH6wXxtMo8AnOcesLS
-        XgFKKG09Ju5my4G9XynnyuriHDyLlt0NnO0Dkrl6wPzZ+Jzx2CeGmT1XNmhNskJG
-        KtxJzBycPAHYZou7TxoV9pquwa+z1dfXOYWdfuItZTWvzvORl4MYuIa6ZXHAPyo=
-        =56XS
+        hQIMA8ORz3KkY6O4AQ/+LyizaA4xD+dU0RtE0aVt1o2RlGCYbqp/UYPXksMLc4ui
+        cV95jqzqBsCqH35EZccUxFtO0FS61BKASDyqLxyjYtmGVLlya2K+UUbRnHj1g4hH
+        minxXxzbRsQKLVVHKCDlQeXDaIOaGyH4gXpIdDzZGwV7ooaaaCeeWWh3yJ9IOuCy
+        7FPtsSXsqPi+XM8Ma/FHj3ynPRnqRudEEL8rpAwnqm46nfn3haYmMxFBv9JmIVqu
+        P59O+cTQpe520kgP+hhLH7M8vAkNaqmb3kYI9BHFmNYA/2cZci5VS6KS9BWKqeWY
+        Q+JGafoCCGjadUN+S/Lsoi2IHjsmf7T2P/2P3EXfPSvxpUJuh0xUoLuz4LMdpCIu
+        qX35a2F5l3KBiXWzIiBdh0OzqcCZpT931fLLD22njG+4DB1WMkROvyf5/iri/eCU
+        fSdoAwGN6cG5IaszcDW7CMKS/6nZ/Ele7pDF8WCT7VYeKGNt3AFb5JNIPXQdw1S8
+        waLMxJU+0thmwhOqzVcKHsCnPq4E8YHc4qe4IR/eafY0XuFDVGzjgDHVKgXqyLKt
+        7DNqOcLN70YwQyauISqzkb7bJSG4joIo1WA4ERdeSEzHmAc1WQRlPIXn/4kYdbKG
+        7pkXPO7oGpMWYlx8CFjRQeZcu9b+WjD5ptQd0SV2tmAEH5xK7Jmn9hy8ZprQQQTS
+        XgHUN1Db+YCArQDURIitbMw8TLIoYaL08KsFBjFHT9Cvv8NtvvNJbHsTxb066UnB
+        RB62pusuQ0tLPU1bOBnUFW7v86wl1uEbVs9f8AchyA3t53RqCEuKq/cslTYccJ8=
+        =vZ7q
         -----END PGP MESSAGE-----
       fp: 76DAFEBE0E21604BB9F2D6C11850C928A0D756C8
   encrypted_regex: ^(data|stringData)$
